--- a/readme
+++ b/readme
@@ -5,7 +5,7 @@ Contributions to this project is welcome, but please follow the code style used 
 
 If you want a driver with warranty, then use Ricoh's driver for Microsoft(R) Windows.
 
-I am not affilated with nor employed by Ricoh, this project is done in my spare time.
+I am not affilated with or employed by Ricoh, this project is done in my spare time.
 All trademarks mentioned in this project are owned by their respective owner.
 
 == Features ==
