--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@ Gurich is a free software printer driver for Ricoh SP112.
 In order to install this driver, please see the INSTALL file.
 Contributions to this project is welcome, but please follow the code style used in this driver.
 
-If you want a driver with warranty, then use Ricoh's driver for Microsoft(R) Windows.
+If you want a driver with warranty, then use Ricoh's driver for Microsoft Windows.
 
 I am not affilated with or employed by Ricoh, this project is done in my spare time.
 All trademarks mentioned in this project are owned by their respective owner.
