--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Gurich is a free software printer driver for Ricoh SP112.
+Gurich is a free printer driver for Ricoh SP112.
 
 In order to install this driver, please see the INSTALL file.
 Contributions to this project is welcome, but please follow the code style used in this driver.
@@ -21,7 +21,7 @@ You will store usually postscript files in printfiles/ and then let the driver d
 PDFs work, too.
 
 An example for printing:
-$ ./bin/gurich -p printfiles/why-open-source-misses-the-point-of-free-software.ps 600 1 A4
+$ ./bin/gurich -p printfiles/gplv3.ps 600 1 A4
 
 For other use cases, e.g seeing how much toner is left:
 
@@ -36,7 +36,6 @@ $ ./bin/gurich -h
 print: ./bin/gurich -p [ps/pdf file, resolution (600|1200), copies, paper type (A4 is tested)]
 status: ./bin/gurich -s
 testpage: ./bin/gurich -t
-cups filter: ./bin/gurich -c [filter arguments] (wrapper for -p, does the same job)
 
 You might need to make a rule for udev in order to avoid running gurich with root privileges.
 
