--- a/readme
+++ b/readme
@@ -9,7 +9,7 @@ I am not affilated with or employed by Ricoh, this project is done in my spare t
 All trademarks mentioned in this project are owned by their respective owner.
 
 == Features ==
-* Printing (A4 with 600 and 1200 DPI are tested and works reliably)
+* Printing (A4 with 600 and 1200 DPI are tested and work reliably)
 * Status reports (good, bad, etc)
 * Toner reports (how much toner is left)
 * Can print the printer's built-in testpage
