--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-* Evaluate the system() call due to concerns over eventual environment spoofing in src/shworkaround.c
+﻿* Replacement for Ghostscript in order to be less clumsy
 * Full CUPS filter support in src/gurich.c
 * Full CUPS backend support in src/cbackend/cbackend.c
